<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.blvckbytes</groupId>
    <artifactId>ItemPredicateParser</artifactId>
    <version>0.1.1</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.target>25</maven.compiler.target>
        <maven.compiler.source>25</maven.compiler.source>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>auxilor</id>
            <url>https://repo.auxilor.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>at.blvckbytes</groupId>
            <artifactId>CMMapper</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>me.blvckbytes</groupId>
            <artifactId>SyllablesMatcher</artifactId>
            <version>0.1</version>
        </dependency>
        <!-- MockBukkit needs to be prepended to bukkit, otherwise there will be runtime errors. -->
        <dependency>
            <groupId>org.mockbukkit.mockbukkit</groupId>
            <artifactId>mockbukkit-v26.1.2</artifactId>
            <version>4.114.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>3.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>26.1.2.build.74-stable</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.1.0-M1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.willfp</groupId>
            <artifactId>EcoEnchants</artifactId>
            <version>12.18.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.willfp</groupId>
            <artifactId>eco</artifactId>
            <version>6.71.6</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- I don't think this is hosted anywhere... Clone and manually install into local repo. -->
        <dependency>
            <groupId>su.nightexpress.excellentenchants</groupId>
            <artifactId>Plugin</artifactId>
            <version>5.2.1</version>
            <scope>system</scope>
            <systemPath>${basedir}/lib/ExcellentEnchants-5.2.1.jar</systemPath>
            <exclusions>
                <exclusion>
                    <groupId>org.spigotmc</groupId>
                    <artifactId>spigot-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>config/**</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>at.blvckbytes:CMMapper</include>
                            <include>at.blvckbytes:ComponentMarkup</include>
                            <include>me.blvckbytes:SyllablesMatcher</include>
                            <include>com.github.cryptomorin:XSeries</include>
                            <include>org.jetbrains:annotations</include>
                        </includes>
                    </artifactSet>

                    <relocations>
                        <relocation>
                            <pattern>me.blvckbytes.syllables_matcher</pattern>
                            <shadedPattern>me.blvckbytes.item_predicate_parser.syllables_matcher</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>at.blvckbytes.cm_mapper</pattern>
                            <shadedPattern>me.blvckbytes.item_predicate_parser.cm_mapper</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>at.blvckbytes.component_markup</pattern>
                            <shadedPattern>me.blvckbytes.item_predicate_parser.component_markup</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>com.cryptomorin.xseries</pattern>
                            <shadedPattern>me.blvckbytes.item_predicate_parser.com.cryptomorin.xseries</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>org.jetbrains.annotations</pattern>
                            <shadedPattern>me.blvckbytes.item_predicate_parser.jetbrains_annotations</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>org.intellij.lang.annotations</pattern>
                            <shadedPattern>me.blvckbytes.item_predicate_parser.intellij_annotations</shadedPattern>
                        </relocation>
                    </relocations>

                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/license/**</exclude>
                                <exclude>META-INF/*</exclude>
                                <exclude>META-INF/maven/**</exclude>
                                <exclude>LICENSE</exclude>
                                <exclude>NOTICE</exclude>
                                <exclude>/*.txt</exclude>
                                <exclude>*.ebnf</exclude>
                                <exclude>build.properties</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
            </plugin>
        </plugins>
    </build>
</project>
